# zink

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  setup.ps1  setup.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci-docs.yml  ci-ide.yml  ci-lang.yml  deploy.yml  release.yml
docs/: .gitignore  README.md  changelog.md  contributing.md  index.md  package.json  tsconfig.json
docs/.vitepress/: config.ts
docs/guide/: arrays.md  control-flow.md  error-handling.md  functions.md  getting-started.md  higher-order-functions.md  strings.md  variables.md  what-is-zink.md
docs/reference/: builtins.md  operators.md  syntax.md  types.md
extension/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  language-configuration.json  package-lock.json  package.json
extension/snippets/: zink.json
extension/src/: extension.ts
extension/syntaxes/: zink.tmLanguage.json
lang/: Cargo.toml  README.md
lang/examples/: arrays_and_loops.zink  fibonacci.zink  fizzbuzz.zink  functions.zink  hello.zink  hello_world.zink  higher_order_functions.zink  prime_numbers.zink  variables_and_math.zink
lang/src/: interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs
playground/: README.md  index.html  package.json  vite.config.ts
playground/public/: zink_lang_bg.wasm
playground/scripts/: copy-wasm.js
playground/src/: ZinkIDE.tsx  (+2 more)
(+8 files in other folders)
